--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -911,6 +911,11 @@
           "default": true,
           "label": "t:sections.main-product.blocks.buy_buttons.settings.show_gift_card_recipient.label",
           "info": "t:sections.main-product.blocks.buy_buttons.settings.show_gift_card_recipient.info"
+        },
+        {
+          "type": "text",
+          "id": "custom_css",
+          "label": "custom_css_block"
         }
       ]
     },
