--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -104,7 +104,7 @@
           </span>
         {%- endunless -%}
         <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.sale_price' | t }}</span>
-        <span class="price-item price-item--sale price-item--last">
+        <span class="price-item price-item--sale price-item--last price-item--custom">
           {{ money_price }}
         </span>
       </div>
@@ -134,3 +134,12 @@
     {%- endif -%}
   </div>
 {% endunless %}
+<style>
+  
+  .price-item--custom {
+      {%- if custom_color %} color: {{ custom_color }}; {%- endif -%}
+      {%- if custom_font_weight %} font-weight: {{ custom_font_weight | downcase }}; {%- endif -%}
+      {%- if custom_font_size %} font-size: {{ custom_font_size }}px; {%- endif -%}
+    }
+  
+</style>
